--- a/projectLogin/style.css
+++ b/projectLogin/style.css
@@ -7,7 +7,7 @@ html {
     background-position: center;
 }
 
-/* this works but if window's width got bigger than pic's original size, the leftover space will shown as empty(white) */
+/* this works but if window's width got bigger than background's original size, the leftover space will shown as empty(white) */
 
 #title {
     display: block;
@@ -25,14 +25,10 @@ html {
 #loginBox {
     display: block;
 
-    width: 30%;
+    width: 20%;
     margin: auto;
     margin-top: 30%;
     background: rgba(146, 146, 146, 0.57);
-}
-
-#form {
-    margin-left: 10%;
 }
 
 .center {
